# ebook-tools

./: .dockerignore  .env.docker.example  .env.example  .env.local  .gitignore  .python-version  AGENTS.md  CHANGELOG.md  CLAUDE.MD  Makefile  PLAN.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TRANSLATION_ENGINE_REFACTORING.md  alembic.ini  book.epub  config.json  docker-compose.yml  ebook-tools.py  main.py  pyproject.toml  reload_main_branch.sh  sizes.sh  snapshot.json  watch_20251221-192937  watch_20251222-212914
alembic/: env.py
bcrypt/: __init__.py
conf/: config.json  rendering.yaml  sync_config.py
config/: config.local.json  media.yaml  piper_voices.yaml
docs/: architecture.md  deployment.md  developer-guide.md  dual_track_pipeline_usage.md  frontend-sync.md  interactive-player-refactoring-v2.md  interactive_reader_metadata.md  kubernetes.md  multi-sentence-chunk-plan.md  observability.md  sentence_highlighting.md  sentence_images.md  sequence-playback-issues.md  test-failure-report.md  testing.md  user-guide.md  user-management.md
dotenv/: __init__.py
modules/: __init__.py  api_client.py  audio_video_generator.py  book_cover.py  config_manager.py  ebook_tools.py  environment.py  epub_parser.py  epub_utils.py  fallbacks.py  language_constants.py  language_policies.py  llm_batch.py  llm_client.py  llm_client_manager.py  llm_endpoints.py  llm_providers.py  logging_manager.py  menu_interface.py  metadata_manager.py  observability.py  output_formatter.py  progress_tracker.py  prompt_templates.py  ramdisk_manager.py  retry_annotations.py  text_normalization.py  tmp  translation_batch.py  translation_engine.py  translation_logging.py  translation_validation.py  translation_workers.py  transliteration.py  transliteration_aligned.py
pydub/: __init__.py
scripts/: apple_build_macos_ipad_style.sh  apple_find_provisioning_profile.py  apple_full_entitlement_signing_plan.sh  apple_merge_entitlements.py  apple_pull_device_playback_log.sh  apple_unattended_device_update.sh  backfill_generation_stats.py  backfill_translation_models.py  check_apple_audio_mode_manager.sh  check_apple_create_readiness.py  check_apple_creation_payloads.sh  check_apple_device_update_helper.sh  check_apple_e2e_config.py  check_apple_e2e_config_writer.sh  check_apple_e2e_journeys.py  check_apple_interactive_context_builder.sh  check_apple_ios_build_helper.sh  check_apple_local_surface_build_helper.sh  check_apple_macos_ipad_style_helper.sh  check_apple_music_bed_launch_log.py  check_apple_playback_mode_switch_integration.sh  check_apple_playback_transport_log.py  check_apple_reader_navigation_contract.sh  check_apple_runtime_descriptor_payload.sh  check_apple_sentence_jump_render_lock.sh  check_apple_sentence_position_provider.sh  check_apple_sequence_pause_cancel.sh  check_apple_shared_pipeline_helper.sh  check_apple_shared_pipeline_manifest.py  check_apple_transcript_display_snapshots.sh  check_apple_tvos_build_helper.sh  check_apple_xcode_readiness.py  check_auth_latency.py  check_cjk_tokenization.py  check_googletrans_languages.py  check_mac_studio_runtime_checkout.sh  check_release_version_contract.py  check_web_e2e_journeys.py  compare_sentence_splitters.py  db_migrate.py  (+31 more)
src/: check_poc_readiness.py
test-results/: e2e-report.html  e2e-report.md  ios-e2e-report.md  ipad-e2e-report.md  iphone-e2e-report.md  tvos-e2e-report.md  web-e2e-report.md
tests/: __init__.py  conftest.py  test_apple_audio_stream_recovery_contract.py  test_apple_browse_chrome_contract.py  test_apple_chunk_metadata_retry_contract.py  test_apple_create_options_fallback.py  test_apple_create_readiness_journey.py  test_apple_create_split_layout.py  test_apple_e2e_env_file_contract.py  test_apple_e2e_login_contract.py  test_apple_ios_build_contract.py  test_create_book.py  (+40 more)
(+1798 files in other folders)
