[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-tools"
version = "0.1.0"
description = "Toolkit for running the ebook tools pipelines and API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.24,<0.28",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "requests>=2.31,<3",
    "pydub>=0.25,<0.27",
    "Pillow>=10,<11",
    "gTTS>=2.5,<3",
    "python-dotenv>=1.0,<2",
    "regex>=2023.0",
]

[project.scripts]
ebook-tools = "modules.cli.main:main"
ebook-tools-api = "modules.webapi.__main__:main"
