[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-tools"
version = "0.1.0"
description = "Toolkit for running the ebook tools pipelines and API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.24,<0.28",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "requests>=2.31,<3",
    "pydub>=0.25,<0.27",
    "Pillow>=10,<11",
    "gTTS>=2.5,<3",
    "python-dotenv>=1.0,<2",
    "regex>=2023.0",
    "psutil>=5.9,<6",
    "PyYAML>=6.0.1,<7",
    "bcrypt>=4.0,<5",
    "camel-tools>=1.5,<2",
    "googletrans==4.0.0rc1",
    "pypinyin>=0.50,<1",
    "pykakasi>=2.2,<3",
    "yt-dlp>=2024.8,<2025.0",
    "PyJWT[crypto]>=2.8,<3",
    "httpx[http2]>=0.25,<1",
]

[project.scripts]
ebook-tools = "modules.cli.main:main"
ebook-tools-api = "modules.webapi.__main__:main"

[tool.pytest.ini_options]
addopts = "-rs"
markers = [
    "integration: marks tests that exercise end-to-end workflows.",
]
