[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-tools"
version = "0.1.0"
description = "Toolkit for running the ebook tools pipelines and API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.24,<0.28",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "requests>=2.31,<3",
    "pydub>=0.25,<0.27",
    "Pillow>=10,<11",
    "gTTS>=2.5,<3",
    "python-dotenv>=1.0,<2",
    "regex>=2023.0",
    "psutil>=5.9,<6",
    "PyYAML>=6.0.1,<7",
    "bcrypt>=4.0,<5",
    "camel-tools>=1.5,<2",
    "googletrans>=4.0.2,<5",
    "pypinyin>=0.50,<1",
    "pykakasi>=2.2,<3",
    "yt-dlp>=2024.8,<2025.0",
    "PyJWT[crypto]>=2.8,<3",
    "httpx[http2]>=0.27,<1",
    "piper-tts>=1.2.0",
]

[project.scripts]
ebook-tools = "modules.cli.main:main"
ebook-tools-api = "modules.webapi.__main__:main"

[tool.pytest.ini_options]
addopts = "-rs"
testpaths = ["tests"]
markers = [
    "integration: end-to-end workflows requiring external services.",
    "audio: TTS backends, voice selection, audio highlighting.",
    "translation: translation engine, batch processing, CJK tokenization.",
    "metadata: metadata enrichment, structured conversion, library metadata.",
    "webapi: FastAPI routes, middleware, CORS, auth endpoints.",
    "pipeline: core rendering pipeline, multi-sentence chunks, timeline.",
    "services: job manager, pipeline service, file locator, assistant.",
    "cli: command-line interface, args parsing, user commands.",
    "auth: user management, session, auth service.",
    "library: library sync, indexer, repository.",
    "render: output writer, text pipeline, parallel dispatch.",
    "media: command runner, media backends.",
    "config: config manager, storage settings, runtime context.",
    "ramdisk: RAMDisk lifecycle, guard, mount/unmount.",
    "slow: tests that take >2s (WhisperX, Piper, pipelines).",
]
